Reviews and Completion process change is done
