# backend/modules/Offer/swagger/RouteDefinition.yaml
@@ -265,4 +265,34 @@
     responses:
       "200":
         description: Offers retrieved successfully
+"/v1/offer/giveReview/{offerId}/{requestId}":
+  put:
+    security:
+      - Locale: []
+      - ApiToken: []
+    tags:
+      - Offer
+    summary: Complete offer request
+    parameters:
+      - in: path
+        name: offerId
+        required: true
+        description: ID of the offer 
+        schema:
+          type: string
+      - in: path
+        name: requestId
+        required: true
+        description: ID of the request
+        schema:
+          type: string
+    requestBody:
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/GiveReviewRequest"
+    responses:
+      "200":
+        description: Offers retrieved successfully
 
